syntax = "proto3";

package io.carbynestack.castor.common.grpc;

option go_package = "common.grpc";

message GrpcTupleChunkRequest{
  string chunk_id = 1;
}
